<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/logo"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Description"
        android:src="@drawable/logo">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/no_uniform"
            style="@style/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_uniform"
            >
        </TextView>
        <TextView
            android:id="@+id/name_label"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            >
        </TextView>
        <EditText
            android:id="@+id/name_input"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            >
        </EditText>
        <TextView
            android:id="@+id/surname_label"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            >
        </TextView>
        <EditText
            android:id="@+id/surname_input"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            >
        </EditText>
        <TextView
            android:id="@+id/class_label"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/classname"
            >
        </TextView>
        <EditText
            android:id="@+id/class_input"
            style="@style/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text">
        </EditText>
        <Button
            android:id="@+id/save_note_button"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note">
        </Button>

    </LinearLayout>
</LinearLayout>
